--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="Container">
-      <img src="/images/illustration-hero.svg" alt="illustration-hero" />
+      <img src="./images/illustration-hero.svg" alt="illustration-hero" />
 
       <div class="Description">
         <h1>Order Summary</h1>
@@ -22,7 +22,7 @@
         </p>
         <div class="Sub-Container1">
           <div class="Sub-Container2">
-            <img src="/images/icon-music.svg" alt="Music-Icon" />
+            <img src="./images/icon-music.svg" alt="Music-Icon" />
 
             <p>
               <span class="S1"> Annual Plan</span> <br />
